# data-challenge-alura-store

./: AluraStoreBr.ipynb  README.md  pyproject.toml
