[project]
name = "data-challenge-alura-store"
version = "0.1.0"
description = ""
authors = [
    {name = "alexpaivadev",email = "alexpaiva.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "data_challenge_alura_store", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
